Fix line length in faq/view_faq.html

--- a/faq/templates/faq/view_faq.html
+++ b/faq/templates/faq/view_faq.html
@@ -8,20 +8,25 @@
     {% for question in questions %}
     <div class="accordion-item">
         <h2 class="accordion-header" id="heading{{question.id}}">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapse{{question.id}}" aria-expanded="true" aria-controls="collapse{{question.id}}">
+            <button class="accordion-button" type="button" 
+                data-bs-toggle="collapse"
+                data-bs-target="#collapse{{question.id}}" aria-expanded="true" 
+                aria-controls="collapse{{question.id}}">
                 {{ question.body }}
             </button>
         </h2>
-        <div id="collapse{{question.id}}" class="accordion-collapse collapse {% if forloop.first %} show {% endif %}"
-            aria-labelledby="heading{{question.id}}" data-bs-parent="#faqAccordion">
+        <div id="collapse{{question.id}}" class="accordion-collapse collapse 
+            {% if forloop.first %} show {% endif %}" 
+            aria-labelledby="heading{{question.id}}"
+            data-bs-parent="#faqAccordion">
             <div class="accordion-body">
                 {% for answer in question.question_answer.all %}
                 {% if answer.status == 1 %}
                 <p>{{ answer.body | safe }}</p>
                 <form action="{% url 'like' answer.pk %}" method="POST">
                     {% csrf_token %}
-                    <button type="submit" , name="answer_id" , value="{{ answer.id }}">Like</button>
+                    <button type="submit" , name="answer_id", 
+                        value="{{ answer.id }}">Like</button>
                     <input type="hidden" name="next" value=" {{ answer.id }}">
                 </form>
                 Liked by {{ answer.like.all.count }} number of users.
