--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,12 +1,7 @@
-{% extends "base.html" %}
-{% load static %}
-{% load cart_tools %}
-
+{% extends "base.html" %} {% load static %} {% load cart_tools %} 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
-{% endblock %}
-
-{% block content %}
+{% endblock %} {% block content %}
 <!-- template taken from code institute boutique ado walkthrough -->
 <div class="container mb-2">
     <div class="row">
@@ -16,7 +11,6 @@
             <hr>
         </div>
     </div>
-
     <div class="row">
         <div class="col-12 col-lg-6 order-lg-last mb-5">
             <p class="text-muted">Order Summary ({{ product_count }})</p>
@@ -29,26 +23,28 @@
                 </div>
             </div>
         </div>
-
         {% for item in cart_items %}
         <div class="row">
             <div class="col-2 mb-1">
-                <a href="{% url 'product_detail' item.product.id %}">
-                    {% if item.product.image %}
-                    <img class="w-100" src="{{ item.product.image.url }}" alt="{{ product.name }}">
-                    {% else %}
-                    <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                    {% endif %}
-                </a>
+                <a href="{% url 'product_detail' item.product.id %}"> 
+                    {% if item.product.image %} <img class="w-100"
+                        src="{{ item.product.image.url }}" 
+                        alt="{{ product.name }}"> {% else %} <img class="w-100"
+                        src="{{ MEDIA_URL }}noimage.png" 
+                        alt="{{ product.name }}"> {% endif %} </a>
             </div>
             <div class="col-7">
-                <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                <p class="my-0">
+                    <strong>{{ item.product.name }}</strong>
+                </p>
                 <!-- <p class="my-0 small">Size: {% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}
-                </p> -->
+               </p> -->
                 <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
             </div>
             <div class="col-3 text-right">
-                <p class="my-0 small text-muted">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
+                <p class="my-0 small text-muted">
+                    £{{ item.product.price | calc_subtotal:item.quantity }}
+                </p>
             </div>
         </div>
         {% endfor %}
@@ -56,58 +52,69 @@
         <div class="row text-black text-right">
             <div class="col-7 offset-2">
                 <p class="my-0">Order Total:</p>
-
             </div>
             <div class="col-3">
                 <p class="my-0">£{{ total | floatformat:2 }}</p>
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-12 col-lg-6">
-            <p class="text-muted">Please fill out the form below to complete your order.</p>
+            <p class="text-muted">Please fill out the form below to complete 
+                your order.</p>
             <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                 {% csrf_token %}
                 <fieldset class="rounded px-3 mb-5">
-                    <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
+                    <legend class="fieldset-label small text-black px-2 
+                    w-auto">Details</legend>
                     {{ order_form.full_name | as_crispy_field }}
                     {{ order_form.email | as_crispy_field }}
                 </fieldset>
                 <fieldset class="rounded px-3 mb-5">
-                    <legend class="fieldset-label small text-black px-2 w-auto">Delivery</legend>
+                    <legend class="fieldset-label small text-black px-2 w-auto">
+                        Delivery</legend>
                     {{ order_form.phone_number | as_crispy_field }}
                     {{ order_form.street_address1 | as_crispy_field }}
                     {{ order_form.street_address2 | as_crispy_field }}
                     {{ order_form.town_or_city | as_crispy_field }}
                     {{ order_form.county | as_crispy_field }}
                     {{ order_form.postcode | as_crispy_field }}
-                    <div class="form-check form-check-inline float-right mr-0">
-                        {% if user.is_authenticated %}
-                        <label class="form-check-label" for="id-save-info">Save this delivery information to my
-                            profile</label>
-                        <input class="form-check-input ml-2 mr-0" type="checkbox" id="id-save-info" name="save-info"
-                            checked>
+                    <div class="form-check form-check-inline float-right mr-0"> 
+                        {% if user.is_authenticated %} 
+                            <label class="form-check-label" for="id-save-info">
+                                Save this delivery information to my profile
+                            </label>
+                        <input class="form-check-input ml-2 mr-0" 
+                            type="checkbox" id="id-save-info" name="save-info"
+                            checked> 
                         {% else %}
-                        <label class="form-check-label" for="id-save-info">
-                            <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or
-                            <a class="text-info" href="{% url 'account_login' %}">login</a> to save this
-                            information
-                        </label>
+                            <label class="form-check-label" for="id-save-info">
+                            <a class="text-info" 
+                            href="{% url 'account_signup' %}">
+                                Create an account
+                            </a> 
+                            or 
+                            <a class="text-info" 
+                                href="{% url 'account_login' %}">login
+                            </a> to save this information
+                        </label> 
                         {% endif %}
                     </div>
                 </fieldset>
                 <fieldset class="px-3">
-                    <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
+                    <legend class="fieldset-label small text-black px-2 w-auto">
+                        Payment
+                    </legend>
                     <div class="mb-3" id="card-element"></div>
-
                     <!-- Used to display form errors -->
-                    <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
-                    <input type="hidden" value="{{ client_secret }}" name="client_secret">
+                    <div class="mb-3 text-danger" id="card-errors" 
+                        role="alert"></div>
+                        <input type="hidden" value="{{ client_secret }}"
+                            name="client_secret">
                 </fieldset>
-
                 <div class="submit-button text-right mt-5 mb-2">
-                    <a href="{% url 'view_cart' %}" class="btn btn-outline-black rounded-0">
+                    <a href="{% url 'view_cart' %}" 
+                        class="btn btn-outline-black rounded-0">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
@@ -123,7 +130,9 @@
                         <span class="icon">
                             <i class="fas fa-exclamation-circle"></i>
                         </span>
-                        <span>Your card will be charged <strong>£{{ total|floatformat:2 }}</strong></span>
+                        <span>Your card will be charged 
+                            <strong>£{{ total|floatformat:2 }}</strong>
+                        </span>
                     </p>
                 </div>
             </form>
@@ -137,12 +146,9 @@
         </span>
     </h1>
 </div>
-{% endblock %}
-
-{% block postloadjs %}
-{{ block.super }}
+{% endblock %} {% block postloadjs %} {{ block.super }}
 <!-- use json_script as can't render django template var's in externaL js files -->
 {{ stripe_public_key|json_script:"id_stripe_public_key" }}
 {{ client_secret|json_script:"id_client_secret" }}
-<script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
+<script src="{% static 'checkout/js/stripe_elements.js' %}"></script> 
 {% endblock %}
