--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -13,17 +13,21 @@
                 </div>
                 <!-- remove as want all to have images -->
                 {% if product.image %}
-                <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                <img src="{{ product.image.url }}" class="card-img-top" 
+                    alt="{{ product.name }}">
                 {% endif %}
                 <div class=" card-body">
                     <h5 class="card-title">Description:</h5>
                     <p class="card-text">{{ product.description }}</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Category: {{ product.category }}</li>
+                    <li class="list-group-item">
+                        Category: {{ product.category }}
+                    </li>
                     <li class="list-group-item">Price: £{{ product.price }}</li>
                 </ul>
-                <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
+                <form class="form" action="{% url 'add_to_cart' product.id %}" 
+                    method="POST">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-12">
@@ -32,18 +36,25 @@
                                 <div class="input-group">
                                     <!-- ALTERNATIVE TO PREPEND FOR BS5??????? -->
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn btn-black rounded-0"
-                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                        <button class="decrement-qty btn 
+                                            btn-black rounded-0"
+                                            data-item_id="{{ product.id }}" 
+                                            id="decrement-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
                                             </span>
                                         </button>
                                     </div>
-                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
-                                        min="1" max="15" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    <input class="form-control qty_input" 
+                                        type="number" name="quantity" value="1"
+                                        min="1" max="15" 
+                                        data-item_id="{{ product.id }}" 
+                                        id="id_qty_{{ product.id }}">
                                     <div class="input-group-append">
-                                        <button class="increment-qty btn btn-black rounded-0"
-                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                        <button class="increment-qty btn 
+                                            btn-black rounded-0"
+                                            data-item_id="{{ product.id }}" 
+                                            id="increment-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-plus"></i>
                                             </span>
@@ -67,17 +78,20 @@
                         </div>
                         <!-- CHECK IF NEEDED -->
                         <!-- hidden form element to redirect back to page came from (redirect_url) -->
-                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        <input type="hidden" name="redirect_url" 
+                            value="{{ request.path }}">
                     </div>
                 </form>
                 <div class="card-body">
-                    <a href="{% url 'product_detail' product.id %}" class="card-link">See Info</a>
+                    <a href="{% url 'product_detail' product.id %}" 
+                        class="card-link">See Info</a>
                 </div>
                 <!-- add at to cart button -->
                 {% if request.user.is_superuser %}
                 <small class="ml-3">
                     <a href="{% url 'edit_product' product.id %}">Edit</a> |
-                    <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                    <a class="text-danger" 
+                        href="{% url 'delete_product' product.id %}">Delete</a>
                 </small>
                 {% endif %}
             </div>
@@ -85,6 +99,4 @@
         {% endfor %}
     </div>
 </div>
-
-
 {% endblock %}
