--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -13,7 +13,8 @@
         </div>
     </div>
     <div class="container">
-        <form action="{% url 'add_product' %}" method="POST" enctype="multipart/form-data">
+        <form action="{% url 'add_product' %}" method="POST" 
+            enctype="multipart/form-data">
             {% csrf_token %}
             {% csrf_token %}
             {% for field in form %}
@@ -25,8 +26,11 @@
             {% endfor %}
             <input type="submit" name="Submit">
             <div class="text-right">
-                <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
-                <button class="btn btn-black rounded-0" type="submit">Add Product</button>
+                <a class="btn btn-outline-black rounded-0" 
+                    href="{% url 'products' %}">Cancel</a>
+                <button class="btn btn-black rounded-0" 
+                    type="submit">Add Product
+                </button>
             </div>
         </form>
     </div>
