--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -12,7 +12,8 @@
                 </div>
                 {% if product.image %}
                 <a href="{{ product.image.url }}" target="_blank">
-                    <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                    <img src="{{ product.image.url }}" class="card-img-top" 
+                        alt="{{ product.name }}">
                 </a>
                 {% endif %}
                 <div class="card-body">
@@ -20,11 +21,13 @@
                     <p class="card-text">{{ product.description }}</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Category: {{ product.category }}</li>
+                    <li class="list-group-item">
+                        Category: {{ product.category }}</li>
                     <li class="list-group-item">Price: £{{ product.price }}</li>
                 </ul>
                 <!-- use post method as adding info (cart) to server -->
-                <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
+                <form class="form" action="{% url 'add_to_cart' product.id %}"
+                     method="POST">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-12">
@@ -33,18 +36,25 @@
                                 <div class="input-group">
                                     <!-- ALTERNATIVE TO PREPEND FOR BS5??????? -->
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn btn-black rounded-0"
-                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                        <button class="decrement-qty btn 
+                                            btn-black rounded-0"
+                                            data-item_id="{{ product.id }}" 
+                                                id="decrement-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
                                             </span>
                                         </button>
                                     </div>
-                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
-                                        min="1" max="15" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    <input class="form-control qty_input" 
+                                        type="number" name="quantity" value="1"
+                                        min="1" max="15" 
+                                        data-item_id="{{ product.id }}" 
+                                        id="id_qty_{{ product.id }}">
                                     <div class="input-group-append">
-                                        <button class="increment-qty btn btn-black rounded-0"
-                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                        <button class="increment-qty btn 
+                                            btn-black rounded-0"
+                                            data-item_id="{{ product.id }}" 
+                                            id="increment-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-plus"></i>
                                             </span>
@@ -60,20 +70,27 @@
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
-                                <span class="text-uppercase">Keep Shopping</span>
+                                <span class="text-uppercase">
+                                    Keep Shopping
+                                </span>
                             </a>
                             <input type="submit" class="btn" value="Add to Cart">
                         </div>
                         <!-- hidden form element to redirect back to page came from (redirect_url) -->
-                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        <input type="hidden" name="redirect_url" 
+                            value="{{ request.path }}">
                     </div>
                 </form>
 
                 <div class="card-body">
                     {% if request.user.is_superuser %}
                     <small class="ml-3">
-                        <a href="{% url 'edit_product' product.id %}">Edit</a> |
-                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        <a href="{% url 'edit_product' product.id %}">
+                            Edit
+                        </a>
+                        <a class="text-danger" 
+                            href="{% url 'delete_product' product.id %}">Delete
+                        </a>
                     </small>
                     {% endif %}
                 </div>
