--- a/products/templates/products/edit.html
+++ b/products/templates/products/edit.html
@@ -23,7 +23,8 @@
 
     <div class="row">
         <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2"
+            <form method="POST" action="{% url 'edit_product' product.id %}" 
+                class="form mb-2"
                 enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
@@ -34,8 +35,11 @@
                 {% endif %}
                 {% endfor %}
                 <div class="text-right">
-                    <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
-                    <button class="btn btn-black rounded-0" type="submit">Update Product</button>
+                    <a class="btn btn-outline-black rounded-0" 
+                        href="{% url 'products' %}">Cancel</a>
+                    <button class="btn btn-black rounded-0" type="submit">
+                        Update Product
+                    </button>
                 </div>
             </form>
         </div>
