--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,10 @@
 
     {% block corecss %}
     <!-- bootstrap5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" 
+        rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" 
+        crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
@@ -25,13 +27,16 @@
 
     {% block corejs %}
     <!-- fontawesome -->
-    <script src="https://kit.fontawesome.com/6a7752b7f5.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/6a7752b7f5.js" 
+        crossorigin="anonymous"></script>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
-        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" 
+            crossorigin="anonymous"></script>
     <!-- javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" 
+            crossorigin="anonymous">
     </script>
     <!-- stripe -->
     <script src="https://js.stripe.com/v3/"></script>
@@ -49,60 +54,83 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
             <div class="row">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                <button class="navbar-toggler" type="button" 
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" 
+                    aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse" 
+                    id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                            <a class="nav-link active" aria-current="page" 
+                                href="{% url 'home' %}">Home
+                            </a>
                         </li>
                         <li class="nav-item">
                             {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                            <a class="nav-link" href="{% url 'account_logout' %}">
+                                Logout
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profile' %}">My Profile</a>
+                            <a class="nav-link" href="{% url 'profile' %}"
+                                >My Profile
+                            </a>
                         </li>
                         {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
+                            <a class="nav-link" href="{% url 'account_signup' %}">
+                                Register
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                            <a class="nav-link" href="{% url 'account_login' %}">
+                                Login
+                            </a>
                         </li>
                         {% endif %}
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'products' %}">Menu</a>
+                            <a class="nav-link" href="{% url 'products' %}">
+                                Menu
+                            </a>
                         </li>
                         <li class="nav-item">
                             <!-- ADD ABREVIATION -->
-                            <a class="nav-link" href="{% url 'view_faq' %}"><abbr
-                                    title="Frequently Asked Questions">FAQs</abbr></a>
+                            <a class="nav-link" href="{% url 'view_faq' %}">
+                                <abbr title="Frequently Asked Questions">FAQs</abbr>
+                            </a>
                         </li>
                         {% if request.user.is_authenticated %}
                         {% if request.user.is_superuser %}
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+                            <a class="nav-link dropdown-toggle" href="#" 
+                                id="navbarDarkDropdownMenuLink" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Product Management
+                                    Product Management
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                                <li><a class="dropdown-item" href="{% url 'add_product' %}">Add Product</a></li>
-                                <li><a class="dropdown-item" href="#">Edit Product</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <ul class="dropdown-menu dropdown-menu-dark" 
+                                aria-labelledby="navbarDarkDropdownMenuLink">
+                                <li><a class="dropdown-item" 
+                                    href="{% url 'add_product' %}">
+                                    Add Product
+                                </a></li>
+                                <li><a class="dropdown-item" href="#">
+                                    Edit Product
+                                </a></li>
                             </ul>
                         </li>
                         {% endif %}
                         {% endif %}
                         <li class="nav-item list-inline-item">
-                            <a class="nav-link" href="{% url 'view_cart' %}">Shopping Cart
+                            <a class="nav-link" href="{% url 'view_cart' %}">
+                                Shopping Cart
                                 {% if total %}
-                                £{{ total|floatformat:2 }}
+                                    £{{ total|floatformat:2 }}
                                 {% else %}
                                 £0.00
                                 {% endif %}
@@ -111,19 +139,26 @@
 
                     </ul>
                     <form class="d-flex" method="GET" action="{% url 'products' %}">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
-                            name="q">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <input class="form-control me-2" type="search" 
+                            placeholder="Search" aria-label="Search" name="q">
+                        <button class="btn btn-outline-success" 
+                            type="submit">Search</button>
                     </form>
                 </div>
                 <div class="row">
                     <ul class="navbar-nav float-none float-md-end">
                         <li class="nav-item"><a class="nav-link active"
-                                href="{% url 'products' %}?category=bratwurst">Bratwursts</a></li>
+                            href="{% url 'products' %}?category=bratwurst">
+                            Bratwursts
+                        </a></li>
                         <li class="nav-item"><a class="nav-link"
-                                href="{% url 'products' %}?category=schnitzels">Schnitzels</a></li>
+                            href="{% url 'products' %}?category=schnitzels">
+                            Schnitzels
+                        </a></li>
                         <li class="nav-item"><a class="nav-link"
-                                href="{% url 'products' %}?category=currywurst">Currywurst</a></li>
+                            href="{% url 'products' %}?category=currywurst">
+                            Currywurst
+                        </a></li>
                     </ul>
                 </div>
             </div>
