--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -45,7 +45,8 @@
                                             </span>
                                         </button>
                                     </div>
-                                    <input class="form-control qty_input" 
+                                    <!-- make form value dynamic -->
+                                    <input class="form-control qty_input"
                                         type="number" name="quantity" value="1"
                                         min="1" max="15" 
                                         data-item_id="{{ product.id }}" 
