Add placeholder text to products/all if no products

--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -101,6 +101,8 @@
                 {% endif %}
             </div>
         </div>
+        {% empty %}
+         NO PRODUCTS YET
         {% endfor %}
     </div>
 </div>
