--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -16,7 +16,7 @@
                     alt="{{ product.name }}">
                 <div class=" card-body">
                     <h5 class="card-title">Description:</h5>
-                    <p class="card-text">{{ product.description }}</p>
+                    <p class="card-text">{{ product.short_description }}</p>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
