--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -49,12 +49,13 @@
                                         min="1" max="15" 
                                         data-item_id="{{ product.id }}" 
                                         id="id_qty_{{ product.id }}">
-                                    {% endfor %}
-                                    <!-- <input class="form-control qty_input"
-                                        type="number" name="quantity" value="{{ item.quantity }}"
+                                    {% empty %}
+                                    <input class="form-control qty_input"
+                                        type="number" name="quantity" value=0
                                         min="1" max="15" 
                                         data-item_id="{{ product.id }}" 
-                                        id="id_qty_{{ product.id }}"> -->
+                                        id="id_qty_{{ product.id }}">
+                                    {% endfor %}
                                     <div class="input-group-append">
                                         <button class="increment-qty btn 
                                             btn-black rounded-0"
