--- a/products/templates/products/delete.html
+++ b/products/templates/products/delete.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 Are you sure you want to delete "{{ product }}"?
-<form action="" method="POST">
+<form action="{% url 'products' %}" method="POST">
     {% csrf_token %}
     <a href="/">CANCEL</a>
     <input type="submit" name="DELETE">
