--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,9 @@
+abbr {
+  border-bottom: none !important;
+  cursor: inherit !important;
+  text-decoration: none !important;
+}
+
 body {
     background-color: red;
 }
