--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -9,28 +9,30 @@
         {% for product in products %}
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-3">
             <div class="card h-100">
-                <div class="card-header">
-                    NAME: {{ product.name }}
-                </div>
                 <img src="{{ product.image.url }}" class="card-img-top" 
-                    alt="{{ product.name }}">
+                alt="{{ product.name }}">
                 <div class=" card-body">
-                    <h5 class="card-title">Description:</h5>
+                    <h5 class="card-title">{{ product.name }}</h5>
                     <p class="card-text">{{ product.short_description }}</p>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
                         Category: {{ product.category }}
                     </li>
-                    <li class="list-group-item">Price: £{{ product.price }}</li>
+                    <li class="list-group-item">£{{ product.price }}</li>
                 </ul>
-                <form class="form" action="{% url 'add_to_cart' product.id %}" 
+                <div class="card-body">
+                    <!-- <a href="#link" class="btn btn-info" role="button">Link Button</a> -->
+                    <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-info" role="button">See More Info</a>
+                </div>
+                <form class="form container" action="{% url 'add_to_cart' product.id %}" 
                     method="POST">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-12">
+                            <h3>Add to Cart</h3>
                             <p class="mt-3"><strong>Quantity:</strong></p>
-                            <div class="form-group w-75">
+                            <div class="form-group w-100">
                                 <div class="input-group">
                                     <!-- ALTERNATIVE TO PREPEND FOR BS5??????? -->
                                     <div class="input-group-prepend">
@@ -82,7 +84,7 @@
                                 <span class="text-uppercase">Checkout</span>
                             </a>
                             {% endif %}
-                            <input type="submit" class="btn" value="Add to Cart">
+                            <input type="submit" class="btn btn-info" value="Add to Cart">
                         </div>
                         <!-- CHECK IF NEEDED -->
                         <!-- hidden form element to redirect back to page came from (redirect_url) -->
@@ -90,10 +92,10 @@
                             value="{{ request.path }}">
                     </div>
                 </form>
-                <div class="card-body">
+                <!-- <div class="card-body">
                     <a href="{% url 'product_detail' product.id %}" 
                         class="card-link">See Info</a>
-                </div>
+                </div> -->
                 <!-- add at to cart button -->
                     {% if request.user.is_superuser %}
                         <small class="ml-3">
