--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,5 +19,5 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative; 
+  /* position: relative;  */
 }
