--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="canonical" href="#">
     <html lang="en">
     {% endblock %}
 
