Add google fonts to base html and css

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -84,6 +84,8 @@
     </div>
 </section>
 
+<h1>HEADING</h1>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium sit officiis quidem nam officia quas velit autem? Necessitatibus doloribus dolor ad debitis, nulla saepe soluta quam repudiandae facere laboriosam. Iusto!</p>
 <button class="primary-btn" role="button">Primary Button</button>
 
 {% endblock %}
