--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="#">
     <html lang="en">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Paytone+One&display=swap"
+        rel="stylesheet">
     {% endblock %}
 
     {% block extra_meta %}
