--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -71,13 +71,19 @@
 {% block content %}
 <section class="hero-image">
     <div class="px-4 py-5 text-center">
-        <h1 class="display-5 fw-bold">Centered hero</h1>
-        <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-                popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
-                extensive prebuilt components, and powerful JavaScript plugins.</p>
+        <h1 class="display-1 fw-bolder">Get Wurst</h1>
+        <div class="col-lg-6 mx-auto white-text">
+            <h2 class="display-5 fw-bold">Proper Currywurst</h1>
+            <h2 class="display-5 fw-bold">Banging Bratwurst.</h1>
+            <h2 class="display-5 fw-bold">Serious Schnitzels.</h1>
+            <!-- <p class="lead mb-4">Banging Bratwurst.</p>
+            <p class="lead mb-4">Serious Schnitzels.</p> -->
+              <!-- <p class="lead mb-4">
+                  <p>Proper Currywurst.</p>
+                <p>Banging Bratwurst.</p>
+                <p>Serious Schnitzels.</p> -->
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
+                <button type="button" class="btn primary-btn btn-lg px-4 gap-3">Primary button</button>
                 <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
             </div>
         </div>
@@ -85,7 +91,6 @@
 </section>
 
 <h1>HEADING</h1>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium sit officiis quidem nam officia quas velit autem? Necessitatibus doloribus dolor ad debitis, nulla saepe soluta quam repudiandae facere laboriosam. Iusto!</p>
-<button class="primary-btn" role="button">Primary Button</button>
+
 
 {% endblock %}
