Add logo to navbar-brand in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,9 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <img src="/media/media/product_images/logo.png" alt="">
+            </a>
             <div class="row">
                 <button class="navbar-toggler" type="button" 
                     data-bs-toggle="collapse"
