Add alt value to logo image in the nav

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -73,7 +73,7 @@
     <div class="px-4 py-5 text-center">
         <h1 class="display-1 fw-bolder">Get Wurst</h1>
         <div class="col-lg-6 mx-auto white-text">
-            <h2 class="display-5 fw-bold">Proper Currywurst</h1>
+            <h2 class="display-5 fw-bold">Proper Currywurst.</h1>
             <h2 class="display-5 fw-bold">Banging Bratwurst.</h1>
             <h2 class="display-5 fw-bold">Serious Schnitzels.</h1>
             <!-- <p class="lead mb-4">Banging Bratwurst.</p>
