--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="/media/media/product_images/logo.png" alt="">
+                <img src="/media/media/product_images/logo.png" alt="Black outline of a Bratwurst with Get Wurst written on top to look like the text was done using a squirty bottle of sauce">
             </a>
             <div class="row">
                 <button class="navbar-toggler" type="button" 
