--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,6 +15,15 @@ body {
     /* font-size: 5em; */
 }
 
+/* from Bulma */
+/* .icon {
+  align-items: center;
+  display: inline-flex;
+  justify-content: center;
+  height: 1.5rem;
+  width: 1.5rem;
+} */
+
 /* .no-border {
   border: 0;
 } */
