Change my profile to my account in nav

--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
                         <li class="nav-item text-center">
                             <a class="nav-link" href="{% url 'profile' %}">
                                 <i class="fa-solid fa-user"></i>
-                                My Profile
+                                My Account
                             </a>
                             
                         </li>
